# dcc-mcp-3dsmax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  create_balls_with_dynamics.py  import_balls_fbx.py  install.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  BUNDLED_SKILLS.md  SIDECAR.md  SKILL_DEVELOPMENT.md
examples/: start_server.py  start_sidecar_bridge.py
packaging/: README.txt  assemble_mzp.py
packaging/templates/: dcc_mcp_3dsmax_startup.ms  install.ms
skills/dcc-mcp-3dsmax-setup/: SKILL.md
skills/dcc-mcp-3dsmax-setup/scripts/: setup_dcc_mcp_3dsmax.py
src/dcc_mcp_3dsmax/: __init__.py  __version__.py  _animation_utils.py  _camera_light_utils.py  _capability_manifest.py  _constants.py  _display_utils.py  _env.py  _executor.py  _geometry_io.py  _material_utils.py  _mesh_ops.py  _project_tools.py  _qt_inspector.py  _readiness.py  _render_utils.py  _resources.py  _rigging_utils.py  _scene_utils.py  _semantic_index.py  _uv_atlas.py  _validation_utils.py  _version_probe.py  api.py  capabilities.py  context_snapshot.py  max_bootstrap.py  menu.py  server.py
src/dcc_mcp_3dsmax/dispatcher/: __init__.py  cancel.py  job.py  pump.py  standalone.py  ui.py
src/dcc_mcp_3dsmax/sidecar/: __init__.py  _dispatcher.py  bridge.py  qt_bridge.py
src/dcc_mcp_3dsmax/skills/3dsmax-animation/: SKILL.md  action_bake_transform_animation.py  action_delete_keyframes.py  action_export_animation_curves.py  action_get_animation_controllers.py  action_get_time_settings.py  action_import_animation_curves.py  action_list_keyframes.py  action_play_animation.py  action_set_current_time.py  action_set_key_interpolation.py  action_set_keyframe.py  action_set_timeline_settings.py  action_set_transform_keyframe.py  tools.yaml
src/dcc_mcp_3dsmax/skills/3dsmax-camera-lighting/: SKILL.md  action_create_camera.py  action_create_light.py  action_create_three_point_light_rig.py  action_list_cameras.py  action_list_lights.py  action_set_active_camera.py  action_set_light_properties.py  tools.yaml
src/dcc_mcp_3dsmax/skills/3dsmax-display/: SKILL.md  action_assign_nodes_to_layer.py  action_create_layer.py  action_delete_custom_property.py  action_delete_layer.py  action_get_custom_property.py  action_list_custom_properties.py  action_list_layers.py  action_list_node_display_state.py  action_set_custom_property.py  action_set_node_display_state.py  tools.yaml
src/dcc_mcp_3dsmax/skills/3dsmax-scene/: SKILL.md  (+17 more)
tests/: test_animation_skill_expansion.py  test_automated_e2e.py  test_basic.py  test_bundled_skill_contracts.py  test_camera_lighting_skill.py  test_core_integrations.py  test_display_skill.py  test_geometry_io_skill.py  test_material_skill_expansion.py  test_mesh_ops_skill.py  test_packaging_mzp.py  test_render_skill.py  test_rigging_skill.py  test_scene_object_skill.py  test_scripting_skill.py  test_uv_atlas_skill.py  test_validation_skill.py
tools/: max-dev-build-link-core-win.ps1  max-link-win.ps1  max-status-win.ps1  max-unlink-win.ps1
(+106 files in other folders)
